[gd_scene load_steps=2 format=3 uid="uid://vlnatobsael1"]

[ext_resource type="Script" path="res://scripts/enemies/turret.gd" id="1_ouu8f"]

[node name="turret" type="CharacterBody2D" groups=["enemies", "enemies can shoot"]]
collision_layer = 64
collision_mask = 201
script = ExtResource("1_ouu8f")

[node name="hitbox" type="CollisionShape2D" parent="."]

[node name="sprite" type="AnimatedSprite2D" parent="."]

[node name="left gun" type="Marker2D" parent="."]

[node name="right gun" type="Marker2D" parent="."]

[node name="aggression zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="aggression zone"]
rotation = 4.71239
debug_color = Color(0.7, 0.676667, 0, 0.0862745)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="shot cooldown" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="aggression zone" to="." method="_on_aggression_zone_body_entered"]
[connection signal="body_exited" from="aggression zone" to="." method="_on_aggression_zone_body_exited"]
[connection signal="timeout" from="shot cooldown" to="." method="_on_shot_cooldown_timeout"]
